Added css styling

--- a/game.html
+++ b/game.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Rock Paper Scissors</h1>
-    <div>
-      <button>Rock</button>
-      <button>Paper</button>
-      <button>Scissors</button>
+    <div class="header">
+      <h1>Rock Paper Scissors</h1>
     </div>
+
+    <div class="container">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+
+    <div class="resultText"></div>
   </body>
 </html>
