Added game functionality

--- a/game.html
+++ b/game.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
       <h1>Rock Paper Scissors</h1>
+    </div>
+
+    <div class="instructions">
+      You are being challenged by a nobody! Play rock, paper, scissors. First to
+      5 wins gets to have bragging rights. Begin!
     </div>
 
     <div class="container">
