Added replay button

--- a/game.html
+++ b/game.html
@@ -22,6 +22,8 @@
       <button id="scissors">Scissors</button>
     </div>
 
-    <div class="resultText"></div>
+    <div class="resultText">
+      <p class="roundText"></p>
+    </div>
   </body>
 </html>
